--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
       </div>
       <div class="footer">
         <div class="grid">
-          <p class="footer__copy">&#169;2016 THE SUIT COMPANY ALL RIGHTS RESERVED.</p>
+          <p class="footer__copy">&#169;2016 Loveholics Co. ALL RIGHTS RESERVED.</p>
         </div>
       </div>
     </div>
